--- a/web/bundles/prepros.cfg
+++ b/web/bundles/prepros.cfg
@@ -343,6 +343,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "cd26027b": {
+          "id": "cd26027b",
+          "path": "images/288e9463876f402800fc80dcc9bd1c22.jpeg",
+          "output": "images/288e9463876f402800fc80dcc9bd1c22.jpeg",
+          "name": "288e9463876f402800fc80dcc9bd1c22.jpeg",
+          "category": "IMAGE",
+          "size": 83024,
+          "type": "jpeg",
+          "initialSize": 83024,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
