Revert "submit home"
This reverts commit 24e279703523cebdaa97d8c05fc08be4a171e3e6.

--- a/web/bundles/prepros.cfg
+++ b/web/bundles/prepros.cfg
@@ -265,6 +265,84 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "c5172901": {
+          "id": "c5172901",
+          "path": "images/5c78c493200b8ba289a433d9c178ff7e.jpeg",
+          "output": "images/5c78c493200b8ba289a433d9c178ff7e.jpeg",
+          "name": "5c78c493200b8ba289a433d9c178ff7e.jpeg",
+          "category": "IMAGE",
+          "size": 55914,
+          "type": "jpeg",
+          "initialSize": 55914,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "798b3809": {
+          "id": "798b3809",
+          "path": "images/cdc93772cdf216e79d64bb1901e32708.jpeg",
+          "output": "images/cdc93772cdf216e79d64bb1901e32708.jpeg",
+          "name": "cdc93772cdf216e79d64bb1901e32708.jpeg",
+          "category": "IMAGE",
+          "size": 1141411,
+          "type": "jpeg",
+          "initialSize": 1141411,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "af789e99": {
+          "id": "af789e99",
+          "path": "images/d43f492d08ba806716527accf5ad64c1.jpeg",
+          "output": "images/d43f492d08ba806716527accf5ad64c1.jpeg",
+          "name": "d43f492d08ba806716527accf5ad64c1.jpeg",
+          "category": "IMAGE",
+          "size": 55914,
+          "type": "jpeg",
+          "initialSize": 55914,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ff2704ed": {
+          "id": "ff2704ed",
+          "path": "images/815d90762968dec949b0234731c9d4cb.jpeg",
+          "output": "images/815d90762968dec949b0234731c9d4cb.jpeg",
+          "name": "815d90762968dec949b0234731c9d4cb.jpeg",
+          "category": "IMAGE",
+          "size": 83024,
+          "type": "jpeg",
+          "initialSize": 83024,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f6de03fb": {
+          "id": "f6de03fb",
+          "path": "images/6d48fe929312ea3199723f817eabccf4.jpeg",
+          "output": "images/6d48fe929312ea3199723f817eabccf4.jpeg",
+          "name": "6d48fe929312ea3199723f817eabccf4.jpeg",
+          "category": "IMAGE",
+          "size": 83024,
+          "type": "jpeg",
+          "initialSize": 83024,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e4bc3914": {
+          "id": "e4bc3914",
+          "path": "images/c465272a7d2234021c61c7f2015ef45a.jpeg",
+          "output": "images/c465272a7d2234021c61c7f2015ef45a.jpeg",
+          "name": "c465272a7d2234021c61c7f2015ef45a.jpeg",
+          "category": "IMAGE",
+          "size": 1141411,
+          "type": "jpeg",
+          "initialSize": 1141411,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
