--- a/web/bundles/prepros.cfg
+++ b/web/bundles/prepros.cfg
@@ -330,6 +330,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "03519f3e": {
+          "id": "03519f3e",
+          "path": "images/6f221737050b38808d779d56a818d05d.png",
+          "output": "images/6f221737050b38808d779d56a818d05d.png",
+          "name": "6f221737050b38808d779d56a818d05d.png",
+          "category": "IMAGE",
+          "size": 84866,
+          "type": "png",
+          "initialSize": 84866,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
