Generate Projet CRUD

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+mg_gestion_projet:
+    resource: "@MGGestionBundle/Controller/projetController.php"
+    type:     annotation
+
 mg_user:
     resource: "@MGUserBundle/Resources/config/routing.yml"
     prefix:   /
