--- a/src/MG/GestionBundle/Resources/config/routing.yml
+++ b/src/MG/GestionBundle/Resources/config/routing.yml
@@ -6,3 +6,8 @@ mg_gestion_homepage:
 index:
   path:    /index
   defaults:    {_controller: MGGestionBundle:Advert:index}
+
+
+dashboard:
+  path:    /dashboard
+  defaults:    {_controller: MGGestionBundle:Dashboard:dashboard}
