--- a/web/bundles/prepros.cfg
+++ b/web/bundles/prepros.cfg
@@ -318,19 +318,6 @@
           "height": 0,
           "width": 0
         },
-        "1b425add": {
-          "id": "1b425add",
-          "path": "images/3b9f10554e30edaceaeb264c085e1586.jpeg",
-          "output": "images/3b9f10554e30edaceaeb264c085e1586.jpeg",
-          "name": "3b9f10554e30edaceaeb264c085e1586.jpeg",
-          "category": "IMAGE",
-          "size": 1253553,
-          "type": "jpeg",
-          "initialSize": 1253553,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "03519f3e": {
           "id": "03519f3e",
           "path": "images/6f221737050b38808d779d56a818d05d.png",
@@ -340,6 +327,87 @@
           "size": 84866,
           "type": "png",
           "initialSize": 84866,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "686eb470": {
+          "id": "686eb470",
+          "path": "css/styles-dist.css",
+          "output": "css/styles-dist-dist.css",
+          "name": "styles-dist.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "0470b4c9": {
+          "id": "0470b4c9",
+          "path": "images/08d97abd5f531c0ac1f3ab9333b7b087.png",
+          "output": "images/08d97abd5f531c0ac1f3ab9333b7b087.png",
+          "name": "08d97abd5f531c0ac1f3ab9333b7b087.png",
+          "category": "IMAGE",
+          "size": 2091902,
+          "type": "png",
+          "initialSize": 2091902,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "48eb4c19": {
+          "id": "48eb4c19",
+          "path": "images/23ef2635fafca50c0cbf42ea259fa769.jpeg",
+          "output": "images/23ef2635fafca50c0cbf42ea259fa769.jpeg",
+          "name": "23ef2635fafca50c0cbf42ea259fa769.jpeg",
+          "category": "IMAGE",
+          "size": 55914,
+          "type": "jpeg",
+          "initialSize": 55914,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "25e1b79b": {
+          "id": "25e1b79b",
+          "path": "images/320d1954144b0888a06bf828c4769a82.jpeg",
+          "output": "images/320d1954144b0888a06bf828c4769a82.jpeg",
+          "name": "320d1954144b0888a06bf828c4769a82.jpeg",
+          "category": "IMAGE",
+          "size": 55914,
+          "type": "jpeg",
+          "initialSize": 55914,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fefab86f": {
+          "id": "fefab86f",
+          "path": "images/856e1b25874574791a52b55b93badedf.jpeg",
+          "output": "images/856e1b25874574791a52b55b93badedf.jpeg",
+          "name": "856e1b25874574791a52b55b93badedf.jpeg",
+          "category": "IMAGE",
+          "size": 1141411,
+          "type": "jpeg",
+          "initialSize": 1141411,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "798b3809": {
+          "id": "798b3809",
+          "path": "images/cdc93772cdf216e79d64bb1901e32708.jpeg",
+          "output": "images/cdc93772cdf216e79d64bb1901e32708.jpeg",
+          "name": "cdc93772cdf216e79d64bb1901e32708.jpeg",
+          "category": "IMAGE",
+          "size": 1253553,
+          "type": "jpeg",
+          "initialSize": 1253553,
           "optimized": false,
           "height": 0,
           "width": 0
