Ajout page graphic + chart.js

--- a/src/MG/GestionBundle/Resources/config/routing.yml
+++ b/src/MG/GestionBundle/Resources/config/routing.yml
@@ -11,3 +11,9 @@ index:
 dashboard:
   path:    /dashboard
   defaults:    {_controller: MGGestionBundle:Dashboard:dashboard}
+
+
+graphic:
+  path:    /graphic
+  defaults:    {_controller: MGGestionBundle:Graphic:graphic}
+
