--- a/web/bundles/prepros.cfg
+++ b/web/bundles/prepros.cfg
@@ -411,6 +411,22 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "d397cfd6": {
+          "id": "d397cfd6",
+          "path": "JS/Chart.min.js",
+          "output": "JS/Chart.min-dist.js",
+          "name": "Chart.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
